src/objects/AdallomAudit__c.object
<CustomObject>
    <description>Adallom Audit Records</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>The Type of the Performed Action</description>
        <label>ActionType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewObjectJSON__c</fullName>
        <description>The New State of the Audited Object</description>
        <label>NewObjectJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>The ID of the Audited Object</description>
        <label>ObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectIds__c</fullName>
        <description>The IDs of the Audited Objects</description>
        <label>ObjectIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The Name of the Audited Object</description>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectTitle__c</fullName>
        <description>The Title of the Audited Object</description>
        <label>ObjectTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldObjectJSON__c</fullName>
        <description>The Old State of the Audited Object</description>
        <label>OldObjectJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>The Timestamp of The Audit Event</description>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User Performing Update</description>
        <label>UserId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Adallom Audit Records</label>
    <nameField>
        <label>AdallomAudit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adallom Audit Recordss</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>